--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
 						</div>
 					</div>
 					<!-- bannerBlockSlideBg -->
-					<span class="bgCover bannerBlockSlideBg d-block position-absolute" style="background-image: url(images/img01.jpg);">
-						<img class="sr-only" src="images/img01.jpg" alt="image description">
+					<span class="bgCover bannerBlockSlideBg d-block position-absolute" style="background-image: url(images/hero/elno-homepage-slider-image1.jpg);">
+						<img class="sr-only" src="images/hero/elno-homepage-slider-image1.jpg" alt="image description">
 					</span>
 				</div>
 				<!-- bannerSliderSlide -->
@@ -181,8 +181,8 @@
 						</div>
 					</div>
 					<!-- bannerBlockSlideBg -->
-					<span class="bgCover bannerBlockSlideBg d-block position-absolute" style="background-image: url(images/img17.jpg);">
-						<img class="sr-only" src="images/img17.jpg" alt="image description">
+					<span class="bgCover bannerBlockSlideBg d-block position-absolute" style="background-image: url(images/hero/elno-homepage-slider-image2.jpg);">
+						<img class="sr-only" src="images/hero/elno-homepage-slider-image2.jpg" alt="image description">
 					</span>
 				</div>
 				<!-- bannerSliderSlide -->
@@ -207,8 +207,8 @@
 						</div>
 					</div>
 					<!-- bannerBlockSlideBg -->
-					<span class="bgCover bannerBlockSlideBg d-block position-absolute" style="background-image: url(images/img01.jpg);">
-						<img class="sr-only" src="images/img01.jpg" alt="image description">
+					<span class="bgCover bannerBlockSlideBg d-block position-absolute" style="background-image: url(images/hero/elno-homepage-slider-image3.jpg);">
+						<img class="sr-only" src="images/hero/elno-homepage-slider-image3.jpg" alt="image description">
 					</span>
 				</div>
 				<!-- bannerSliderSlide -->
@@ -233,8 +233,8 @@
 						</div>
 					</div>
 					<!-- bannerBlockSlideBg -->
-					<span class="bgCover bannerBlockSlideBg d-block position-absolute" style="background-image: url(images/img01.jpg);">
-						<img class="sr-only" src="images/img01.jpg" alt="image description">
+					<span class="bgCover bannerBlockSlideBg d-block position-absolute" style="background-image: url(images/hero/elno-homepage-slider-image4.jpg);">
+						<img class="sr-only" src="images/hero/elno-homepage-slider-image4.jpg" alt="image description">
 					</span>
 				</div>
 				<!-- bannerSliderSlide -->
@@ -259,8 +259,8 @@
 						</div>
 					</div>
 					<!-- bannerBlockSlideBg -->
-					<span class="bgCover bannerBlockSlideBg d-block position-absolute" style="background-image: url(images/img01.jpg);">
-						<img class="sr-only" src="images/img01.jpg" alt="image description">
+					<span class="bgCover bannerBlockSlideBg d-block position-absolute" style="background-image: url(images/hero/elno-homepage-slider-image5.jpg);">
+						<img class="sr-only" src="images/hero/elno-homepage-slider-image5.jpg" alt="image description">
 					</span>
 				</div>
 			</section>
@@ -391,10 +391,10 @@
 							<!-- wwdTabsetList -->
 							<ul class="nav nav-tabs d-none d-lg-flex wwdTabsetList text-center" role="tablist">
 								<li class="nav-item d-flex">
-									<a class="nav-link d-flex align-items-center justify-content-center" id="ddt-tab" data-toggle="tab" href="#ddt" role="tab" aria-controls="ddt" aria-selected="true">Indian Kitchen</a>
+									<a class="nav-link d-flex align-items-center justify-content-center active" id="ddt-tab" data-toggle="tab" href="#ddt" role="tab" aria-controls="ddt" aria-selected="true">Indian Kitchen</a>
 								</li>
 								<li class="nav-item d-flex">
-									<a class="nav-link d-flex align-items-center justify-content-center active" id="rdt-tab" data-toggle="tab" href="#rdt" role="tab" aria-controls="rdt" aria-selected="false">Transform Your Kitchen</a>
+									<a class="nav-link d-flex align-items-center justify-content-center" id="rdt-tab" data-toggle="tab" href="#rdt" role="tab" aria-controls="rdt" aria-selected="false">Transform Your Kitchen</a>
 								</li>
 								<li class="nav-item d-flex">
 									<a class="nav-link d-flex align-items-center justify-content-center" id="cdt-tab" data-toggle="tab" href="#cdt" role="tab" aria-controls="cdt" aria-selected="false">Choice Is Yours</a>
@@ -406,7 +406,7 @@
 							<!-- tab content accordion -->
 							<div class="tab-content accordion" id="accordion01">
 								<!-- ddt tab -->
-								<div class="tab-pane fade" id="ddt" role="tabpanel" aria-labelledby="ddt-tab">
+								<div class="tab-pane fade show active" id="ddt" role="tabpanel" aria-labelledby="ddt-tab">
 									<!-- tabHolderWrap -->
 									<div class="tabHolderWrap">
 										<!-- accOpener -->
@@ -424,7 +424,7 @@
 													<div class="col-12 col-lg-6 order-lg-2">
 														<!-- imageWrap -->
 														<div class="alignright imageWrap rounded text-center">
-															<img class="rounded" src="images/img20.jpg" alt="image description">
+															<img class="rounded" src="images/services/elno-homepage-services-image1.jpg" alt="image description">
 														</div>
 													</div>
 												</div>
@@ -433,7 +433,7 @@
 									</div>
 								</div>
 								<!-- rdt tab -->
-								<div class="tab-pane fade show active" id="rdt" role="tabpanel" aria-labelledby="rdt-tab">
+								<div class="tab-pane fade" id="rdt" role="tabpanel" aria-labelledby="rdt-tab">
 									<!-- tabHolderWrap -->
 									<div class="tabHolderWrap">
 										<!-- accOpener -->
@@ -451,7 +451,7 @@
 													<div class="col-12 col-lg-6 order-lg-2">
 														<!-- imageWrap -->
 														<div class="alignright imageWrap rounded text-center">
-															<img class="rounded" src="images/img20.jpg" alt="image description">
+															<img class="rounded" src="images/services/elno-homepage-services-image3.jpg" alt="image description">
 														</div>
 													</div>
 												</div>
@@ -479,7 +479,7 @@
 													<div class="col-12 col-lg-6 order-lg-2">
 														<!-- imageWrap -->
 														<div class="alignright imageWrap rounded text-center">
-															<img class="rounded" src="images/img20.jpg" alt="image description">
+															<img class="rounded" src="images/services/elno-homepage-services-image4.jpg" alt="image description">
 														</div>
 													</div>
 												</div>
@@ -506,7 +506,7 @@
 													<div class="col-12 col-lg-6 order-lg-2">
 														<!-- imageWrap -->
 														<div class="alignright imageWrap rounded text-center">
-															<img class="rounded" src="images/img20.jpg" alt="image description">
+															<img class="rounded" src="images/services/elno-homepage-services-image2.jpg" alt="image description">
 														</div>
 													</div>
 												</div>
@@ -520,7 +520,7 @@
 				</div>
 			</section>
 			<!-- mkCallAside -->
-			<aside class="mkCallAside position-relative text-center text-md-left text-white" data-parallax="scroll" data-image-src="images/img01.jpg">
+			<aside class="mkCallAside position-relative text-center text-md-left text-white" data-parallax="scroll" data-image-src="images/hero/elno-homepage-slider-image2.jpg">
 				<div class="container mkCallAsideHolder position-relative wow fadeInUp" data-wow-delay="0.1s">
 					<div class="align">
 						<div class="row align-items-md-center">
@@ -569,8 +569,8 @@
 										<!-- prPostColumn -->
 										<article class="prPostColumn prPostColumn02 hasOver position-relative">
 											<!-- prColumnBgCover -->
-											<span class="bgCover prColumnBgCover d-block" style="background-image: url(images/img22.jpg);">
-												<img class="sr-only" src="images/img22.jpg" alt="image description">
+											<span class="bgCover prColumnBgCover d-block" style="background-image: url(images/services/elno-homepage-services-image1.jpg);">
+												<img class="sr-only" src="images/services/elno-homepage-services-image1.jpg" alt="image description">
 											</span>
 											<!-- prPostCaption -->
 											<div class="prPostCaption bg-white rounded">
@@ -588,8 +588,8 @@
 										<!-- prPostColumn -->
 										<article class="prPostColumn prPostColumn02 hasOver position-relative">
 											<!-- prColumnBgCover -->
-											<span class="bgCover prColumnBgCover d-block" style="background-image: url(images/img23.jpg);">
-												<img class="sr-only" src="images/img24.jpg" alt="image description">
+											<span class="bgCover prColumnBgCover d-block" style="background-image: url(images/services/elno-homepage-services-image2.jpg);">
+												<img class="sr-only" src="images/services/elno-homepage-services-image2.jpg" alt="image description">
 											</span>
 											<!-- prPostCaption -->
 											<div class="prPostCaption bg-white rounded">
@@ -607,8 +607,8 @@
 										<!-- prPostColumn -->
 										<article class="prPostColumn prPostColumn02 hasOver position-relative">
 											<!-- prColumnBgCover -->
-											<span class="bgCover prColumnBgCover d-block" style="background-image: url(images/img24.jpg);">
-												<img class="sr-only" src="images/img24.jpg" alt="image description">
+											<span class="bgCover prColumnBgCover d-block" style="background-image: url(images/services/elno-homepage-services-image3.jpg);">
+												<img class="sr-only" src="images/services/elno-homepage-services-image3.jpg" alt="image description">
 											</span>
 											<!-- prPostCaption -->
 											<div class="prPostCaption bg-white rounded">
@@ -626,8 +626,8 @@
 										<!-- prPostColumn -->
 										<article class="prPostColumn prPostColumn02 hasOver position-relative">
 											<!-- prColumnBgCover -->
-											<span class="bgCover prColumnBgCover d-block" style="background-image: url(images/img25.jpg);">
-												<img class="sr-only" src="images/img25.jpg" alt="image description">
+											<span class="bgCover prColumnBgCover d-block" style="background-image: url(images/services/elno-homepage-services-image4.jpg);">
+												<img class="sr-only" src="images/services/elno-homepage-services-image4.jpg" alt="image description">
 											</span>
 											<!-- prPostCaption -->
 											<div class="prPostCaption bg-white rounded">
@@ -645,8 +645,8 @@
 										<!-- prPostColumn -->
 										<article class="prPostColumn prPostColumn02 hasOver position-relative">
 											<!-- prColumnBgCover -->
-											<span class="bgCover prColumnBgCover d-block" style="background-image: url(images/img26.jpg);">
-												<img class="sr-only" src="images/img26.jpg" alt="image description">
+											<span class="bgCover prColumnBgCover d-block" style="background-image: url(images/services/elno-homepage-services-image1.jpg);">
+												<img class="sr-only" src="images/services/elno-homepage-services-image1.jpg" alt="image description">
 											</span>
 											<!-- prPostCaption -->
 											<div class="prPostCaption bg-white rounded">
@@ -664,8 +664,8 @@
 										<!-- prPostColumn -->
 										<article class="prPostColumn prPostColumn02 hasOver position-relative">
 											<!-- prColumnBgCover -->
-											<span class="bgCover prColumnBgCover d-block" style="background-image: url(images/img26.jpg);">
-												<img class="sr-only" src="images/img26.jpg" alt="image description">
+											<span class="bgCover prColumnBgCover d-block" style="background-image: url(images/services/elno-homepage-services-image2.jpg);">
+												<img class="sr-only" src="images/services/elno-homepage-services-image2.jpg" alt="image description">
 											</span>
 											<!-- prPostCaption -->
 											<div class="prPostCaption bg-white rounded">
@@ -722,7 +722,7 @@
 			</section>
 		</main>
 		<!-- pageFooterAreaWrap -->
-		<div class="pageFooterAreaWrap position-relative text-center text-sm-left" data-parallax="scroll" data-image-src="images/img01.jpg">
+		<div class="pageFooterAreaWrap position-relative text-center text-sm-left" data-parallax="scroll" data-image-src="images/hero/elno-homepage-slider-image2.jpg">
 			<!-- pageFooterWrapHolder -->
 			<div class="container position-relative pageFooterWrapHolder">
 				<!-- separator -->
@@ -817,11 +817,45 @@
 		<span id="back-top" class="text-center rounded-circle fa fa-angle-up"></span>
 		<div id="loader" class="loader-holder">
 			<div class="block">
-			    <div class="dot white"></div>
-			    <div class="dot"></div>
-			    <div class="dot"></div>
-			    <div class="dot"></div>
-			    <div class="dot"></div>
+				<svg class="pl1" viewBox="0 0 128 128" width="128px" height="128px">
+					<defs>
+						<linearGradient id="pl-grad" x1="0" y1="0" x2="1" y2="1">
+							<stop offset="0%" stop-color="#000" />
+							<stop offset="100%" stop-color="#fff" />
+						</linearGradient>
+						<mask id="pl-mask">
+							<rect x="0" y="0" width="128" height="128" fill="url(#pl-grad)" />
+						</mask>
+					</defs>
+					<g fill="var(--primary)">
+						<g class="pl1__g">
+							<g transform="translate(20,20) rotate(0,44,44)">
+								<g class="pl1__rect-g">
+									<rect class="pl1__rect" rx="8" ry="8" width="40" height="40" />
+									<rect class="pl1__rect" rx="8" ry="8" width="40" height="40" transform="translate(0,48)" />
+								</g>
+								<g class="pl1__rect-g" transform="rotate(180,44,44)">
+									<rect class="pl1__rect" rx="8" ry="8" width="40" height="40" />
+									<rect class="pl1__rect" rx="8" ry="8" width="40" height="40" transform="translate(0,48)" />
+								</g>
+							</g>
+						</g>
+					</g>
+					<g fill="hsl(0,0%,10%)" mask="url(#pl-mask)">
+						<g class="pl1__g">
+							<g transform="translate(20,20) rotate(0,44,44)">
+								<g class="pl1__rect-g">
+									<rect class="pl1__rect" rx="8" ry="8" width="40" height="40" />
+									<rect class="pl1__rect" rx="8" ry="8" width="40" height="40" transform="translate(0,48)" />
+								</g>
+								<g class="pl1__rect-g" transform="rotate(180,44,44)">
+									<rect class="pl1__rect" rx="8" ry="8" width="40" height="40" />
+									<rect class="pl1__rect" rx="8" ry="8" width="40" height="40" transform="translate(0,48)" />
+								</g>
+							</g>
+						</g>
+					</g>
+				</svg>
 			</div>
 		</div>
 	</div>
