--- a/tvunits.html
+++ b/tvunits.html
@@ -290,7 +290,7 @@
 			</aside>
 			
 			<!-- mkCallAside -->
-			<!-- <aside class="mkCallAside animFour position-relative bgCover text-center text-md-left text-white" data-parallax="scroll" data-image-src="images/img50.jpg">
+			<!-- <aside class="mkCallAside animFour position-relative bgCover text-center text-md-left text-white" data-parallax="scroll" data-image-src="images/hero/elno-homepage-slider-image5.jpg">
 				<div class="container mkCallAsideHolder position-relative">
 					<div class="align">
 						<div class="row align-items-md-center">
@@ -312,7 +312,7 @@
 			</aside> -->
 		</main>
 		<!-- pageFooterAreaWrap -->
-		<div class="pageFooterAreaWrap position-relative text-center text-sm-left" data-parallax="scroll" data-image-src="images/img01.jpg">
+		<div class="pageFooterAreaWrap position-relative text-center text-sm-left" data-parallax="scroll" data-image-src="images/hero/elno-homepage-slider-image2.jpg">
 			<!-- pageFooterWrapHolder -->
 			<div class="container position-relative pageFooterWrapHolder">
 				<!-- separator -->
@@ -407,11 +407,45 @@
 		<span id="back-top" class="text-center rounded-circle fa fa-angle-up"></span>
 		<div id="loader" class="loader-holder">
 			<div class="block">
-			    <div class="dot white"></div>
-			    <div class="dot"></div>
-			    <div class="dot"></div>
-			    <div class="dot"></div>
-			    <div class="dot"></div>
+				<svg class="pl1" viewBox="0 0 128 128" width="128px" height="128px">
+					<defs>
+						<linearGradient id="pl-grad" x1="0" y1="0" x2="1" y2="1">
+							<stop offset="0%" stop-color="#000" />
+							<stop offset="100%" stop-color="#fff" />
+						</linearGradient>
+						<mask id="pl-mask">
+							<rect x="0" y="0" width="128" height="128" fill="url(#pl-grad)" />
+						</mask>
+					</defs>
+					<g fill="var(--primary)">
+						<g class="pl1__g">
+							<g transform="translate(20,20) rotate(0,44,44)">
+								<g class="pl1__rect-g">
+									<rect class="pl1__rect" rx="8" ry="8" width="40" height="40" />
+									<rect class="pl1__rect" rx="8" ry="8" width="40" height="40" transform="translate(0,48)" />
+								</g>
+								<g class="pl1__rect-g" transform="rotate(180,44,44)">
+									<rect class="pl1__rect" rx="8" ry="8" width="40" height="40" />
+									<rect class="pl1__rect" rx="8" ry="8" width="40" height="40" transform="translate(0,48)" />
+								</g>
+							</g>
+						</g>
+					</g>
+					<g fill="hsl(0,0%,10%)" mask="url(#pl-mask)">
+						<g class="pl1__g">
+							<g transform="translate(20,20) rotate(0,44,44)">
+								<g class="pl1__rect-g">
+									<rect class="pl1__rect" rx="8" ry="8" width="40" height="40" />
+									<rect class="pl1__rect" rx="8" ry="8" width="40" height="40" transform="translate(0,48)" />
+								</g>
+								<g class="pl1__rect-g" transform="rotate(180,44,44)">
+									<rect class="pl1__rect" rx="8" ry="8" width="40" height="40" />
+									<rect class="pl1__rect" rx="8" ry="8" width="40" height="40" transform="translate(0,48)" />
+								</g>
+							</g>
+						</g>
+					</g>
+				</svg>
 			</div>
 		</div>
 	</div>
