--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 							</header>
 							<!-- btnHolder -->
 							<footer class="btnHolder d-flex flex-wrap justify-content-center">
-								<a href="javascript:void(0);" class="btn btnThemeOutine text-uppercase" data-hover="Click Me">
+								<a href="kitchens.html" class="btn btnThemeOutine text-uppercase" data-hover="Click Me">
 									<span class="d-block btnText">Kitchens</span>
 								</a>
 								<a href="contact.html" class="btn btnTheme text-uppercase" data-hover="Click Me">
@@ -174,7 +174,7 @@
 							</header>
 							<!-- btnHolder -->
 							<footer class="btnHolder d-flex flex-wrap justify-content-center">
-								<a href="javascript:void(0);" class="btn btnThemeOutine text-uppercase" data-hover="Click Me">
+								<a href="kitchens.html" class="btn btnThemeOutine text-uppercase" data-hover="Click Me">
 									<span class="d-block btnText">Kitchens</span>
 								</a>
 							</footer>
@@ -197,7 +197,7 @@
 							</header>
 							<!-- btnHolder -->
 							<footer class="btnHolder d-flex flex-wrap justify-content-center">
-								<a href="javascript:void(0);" class="btn btnThemeOutine text-uppercase" data-hover="Click Me">
+								<a href="kitchens.html" class="btn btnThemeOutine text-uppercase" data-hover="Click Me">
 									<span class="d-block btnText">Kitchens</span>
 								</a>
 								<a href="contact.html" class="btn btnTheme text-uppercase" data-hover="Click Me">
@@ -223,7 +223,7 @@
 							</header>
 							<!-- btnHolder -->
 							<footer class="btnHolder d-flex flex-wrap justify-content-center">
-								<a href="javascript:void(0);" class="btn btnThemeOutine text-uppercase" data-hover="Click Me">
+								<a href="kitchens.html" class="btn btnThemeOutine text-uppercase" data-hover="Click Me">
 									<span class="d-block btnText">Kitchens</span>
 								</a>
 								<a href="contact.html" class="btn btnTheme text-uppercase" data-hover="Click Me">
@@ -249,7 +249,7 @@
 							</header>
 							<!-- btnHolder -->
 							<footer class="btnHolder d-flex flex-wrap justify-content-center">
-								<a href="javascript:void(0);" class="btn btnThemeOutine text-uppercase" data-hover="Click Me">
+								<a href="kitchens.html" class="btn btnThemeOutine text-uppercase" data-hover="Click Me">
 									<span class="d-block btnText">Kitchens</span>
 								</a>
 								<a href="contact.html" class="btn btnTheme text-uppercase" data-hover="Click Me">
@@ -419,7 +419,7 @@
 													<div class="col-12 col-lg-6 order-lg-1 pt-lg-2 mb-5 mb-lg-0">
 														<h3>Indian Kitchen</h3>
 														<p>The Indian kitchen solutions are custom designed to accommodate Indian lifestyle and cooking culture. ElnoKitchen offers complete Indian kitchen design solutions and components like accessories, shutters, appliances, hardware and sinks. We make the process of building your Indian kitchen easy and hassle-free.</p>
-														<!-- <a href="javascript:void(0);" class="btnMore d-inline-block">Details <i class="icn ei_arrow_right"><span class="sr-only">icon</span></i></a> -->
+														<!-- <a href="kitchens.html" class="btnMore d-inline-block">Details <i class="icn ei_arrow_right"><span class="sr-only">icon</span></i></a> -->
 													</div>
 													<div class="col-12 col-lg-6 order-lg-2">
 														<!-- imageWrap -->
@@ -446,7 +446,7 @@
 													<div class="col-12 col-lg-6 order-lg-1 pt-lg-2 mb-5 mb-lg-0">
 														<h3>Transform Your Kitchen</h3>
 														<p>We offer flexible kitchen layout designs that can be customized as required, so we can convert your kitchens into fully modular or semi-modular kitchens.</p>
-														<!-- <a href="javascript:void(0);" class="btnMore d-inline-block">Details <i class="icn ei_arrow_right"><span class="sr-only">icon</span></i></a> -->
+														<!-- <a href="kitchens.html" class="btnMore d-inline-block">Details <i class="icn ei_arrow_right"><span class="sr-only">icon</span></i></a> -->
 													</div>
 													<div class="col-12 col-lg-6 order-lg-2">
 														<!-- imageWrap -->
@@ -474,7 +474,7 @@
 														<h3>Choice Is Yours</h3>
 														<p>For any contemporary and classy kitchens, we primarily focus on cabinet materials, it plays vital role in kitchen designing.</p>
 														<p>Here, cabinetry is available in a variety of surface materials: laminates, hardwood, membrane, back painted glass, etc; to suit your choice of kitchen design.</p>
-														<!-- <a href="javascript:void(0);" class="btnMore d-inline-block">Details <i class="icn ei_arrow_right"><span class="sr-only">icon</span></i></a> -->
+														<!-- <a href="kitchens.html" class="btnMore d-inline-block">Details <i class="icn ei_arrow_right"><span class="sr-only">icon</span></i></a> -->
 													</div>
 													<div class="col-12 col-lg-6 order-lg-2">
 														<!-- imageWrap -->
@@ -501,7 +501,7 @@
 													<div class="col-12 col-lg-6 order-lg-1 pt-lg-2 mb-5 mb-lg-0">
 														<h3>Design And Develop</h3>
 														<p>We know the value of your time and to save your expenses on a kitchen, we not only design, but we also develop it according to your needs for best results in less money and time.</p>
-														<!-- <a href="javascript:void(0);" class="btnMore d-inline-block">Details <i class="icn ei_arrow_right"><span class="sr-only">icon</span></i></a> -->
+														<!-- <a href="kitchens.html" class="btnMore d-inline-block">Details <i class="icn ei_arrow_right"><span class="sr-only">icon</span></i></a> -->
 													</div>
 													<div class="col-12 col-lg-6 order-lg-2">
 														<!-- imageWrap -->
@@ -529,7 +529,7 @@
 								<p>Quality is what we pursue, We know what we do</p>
 							</div>
 							<div class="col-12 col-md-4 text-md-right">
-								<a href="tel:+&#049;&#050;&#051;&#052;&#053;&#054;&#055;&#056;&#057;" class="btn btnTheme btnThemeWhiteInverse fontRoboto btnRoudedLarge" data-hover="Click Me">
+								<a href="contact.html" class="btn btnTheme btnThemeWhiteInverse fontRoboto btnRoudedLarge" data-hover="Click Me">
 									<span class="btnText d-block">
 										<i class="ei_icon_phone btnIcn"><span class="sr-only">icon</span></i>
 										<span>Contact Now</span>
