--- a/wardrobe.html
+++ b/wardrobe.html
@@ -229,7 +229,7 @@
 								<p>Quality is what we pursue, We know what we do</p>
 							</div>
 							<div class="col-12 col-md-4 text-md-right">
-								<a href="tel:+&#049;&#050;&#051;&#052;&#053;&#054;&#055;&#056;&#057;" class="btn btnTheme btnThemeWhiteInverse fontRoboto btnRoudedLarge" data-hover="Click Me">
+								<a href="contact.html" class="btn btnTheme btnThemeWhiteInverse fontRoboto btnRoudedLarge" data-hover="Click Me">
 									<span class="btnText d-block">
 										<i class="ei_icon_phone btnIcn"><span class="sr-only">icon</span></i>
 										<span>Contact Now</span>
